Update README about migration to Maven